# serial2udp

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md  cmake-single-platform.yml  main.cpp  main.h  res.qrc  serial2udpUnitTests.cc
.github/workflows/: cmake-single-platform.yml
serialsvc/: CMakeLists.txt
serialsvc/include/: message.h  serialsvc.h
serialsvc/src/: message.cpp  serialsvc.cpp
